tests/typing/pass/ae/arith/int_arith_2.ae

goal g:
  forall x:int.
  exists y,z:int.
    x <= y <= z
